# lucia-rs

./: README.md
auth-frontend/: .env.example  drizzle.config.ts  package-lock.json  package.json
auth-frontend/app/: page.tsx
auth-frontend/app/components/: ExternalReq.tsx
auth-frontend/app/login/google/: route.ts
auth-frontend/app/login/google/callback/: route.ts
auth-frontend/app/logout/: route.ts
auth-frontend/app/redirect/: AuthHandler.tsx  page.tsx
auth-frontend/drizzle/: 0000_tranquil_mystique.sql
auth-frontend/drizzle/meta/: 0000_snapshot.json  _journal.json
auth-frontend/src/: auth.ts  constant.ts  db.ts  migrate.ts  schema.ts
resource_server/: .env.example  Cargo.toml  rest.http
resource_server/src/: main.rs
resource_server/src/entity/: mod.rs  prelude.rs  session.rs  user.rs
